--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,9 +21,9 @@
         ]
     },
     "include": [
-        "**/*.ts"
+        "src/**/*.ts"
     ],
     "exclude": [
-        "**/files/**/*.ts"
+        "example/**/*.ts"
     ]
 }
