--- a/example/projects/my-lib/package.json
+++ b/example/projects/my-lib/package.json
@@ -4,5 +4,8 @@
   "peerDependencies": {
     "@angular/common": "^8.2.3",
     "@angular/core": "^8.2.3"
+  },
+  "dependencies": {
+    "tslib": "^2.0.0"
   }
 }
