--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-library-assets",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Angular builders to include assets from libraries into applications",
   "builders": "builders.json",
   "scripts": {
@@ -33,13 +33,14 @@
   },
   "homepage": "https://github.com/orjandesmet/ngx-library-assets#readme",
   "peerDependencies": {
-    "@angular/cli": ">=9.1.12"
+    "@angular/cli": ">=10.0.4"
   },
   "dependencies": {
-    "@angular-devkit/architect": "^0.901.12",
-    "@angular-devkit/build-angular": "^0.901.12"
+    "@angular-devkit/architect": "^0.1000.4",
+    "@angular-devkit/build-angular": "^0.1000.4"
   },
   "devDependencies": {
-    "cpy-cli": "^2.0.0"
+    "cpy-cli": "^3.1.1",
+    "typescript": "^3.9.7"
   }
 }
