--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-library-assets",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Angular builders to include assets from libraries into applications",
   "builders": "builders.json",
   "scripts": {
@@ -36,8 +36,8 @@
     "@angular/cli": ">=10.0.4"
   },
   "dependencies": {
-    "@angular-devkit/architect": "^0.1000.4",
-    "@angular-devkit/build-angular": "^0.1000.4"
+    "@angular-devkit/architect": "*",
+    "@angular-devkit/build-angular": "*"
   },
   "devDependencies": {
     "cpy-cli": "^3.1.1",
