--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-library-assets",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "Angular builders to include assets from libraries into applications",
   "builders": "builders.json",
   "scripts": {
@@ -37,12 +37,12 @@
     "@angular/compiler-cli": ">=11.2.7"
   },
   "dependencies": {
-    "@angular-devkit/architect": "^0.1102.6",
-    "@angular-devkit/build-angular": "^0.1102.6"
+    "@angular-devkit/architect": "*",
+    "@angular-devkit/build-angular": "*"
   },
   "devDependencies": {
-    "@angular/compiler": "^11.2.7",
-    "@angular/compiler-cli": "^11.2.7",
+    "@angular/compiler": "*",
+    "@angular/compiler-cli": "*",
     "cpy-cli": "^3.1.1",
     "typescript": "^4.1.0"
   }
